--- a/styles/style.css
+++ b/styles/style.css
@@ -2,19 +2,63 @@ body{
     text-align: center;
     font-family: Open Sans, sans-serif;   
     background-color: #8A71C9; 
-    color:#fff
+    color:#fff;
+    margin:0;
+    line-height: 1,5;
+}
+
+section{
+    max-width: 60%;
+    margin:0 auto;
+}
+
+h1{
+    font-size: 60px;
+    font-weight: 300px;
 }
 
 h2{
   color: #2A0074;
+  text-align: center;
+  font-size: 40px;
+}
+
+h3{
+    font-size: 22px;
+    font-style: italic;
+}
+
+p{
+    text-align: justify;
+    font-size: 20px;
+}
+
+img{
+    width: 100%;
+}
+
+ul{
+    list-style-type: none;
+    line-height: 2;
+}
+
+a{
+    font-weight: 700;
+    color: #99ffff ;
+    text-decoration: none;
 }
 
 .title-1{
    color:#04ff9f;
+   text-align: center;
 }
+
 .title-2{
     color:#FF9E9E;
+    text-align: center;
 }
+
 .title-3{
     color:#ffe36d;
+    text-align: center;
 }
